@@ -2,6 +2,8 @@ package org.alienlabs.adaloveslace.unittest.view.component;
 
 import javafx.scene.image.Image;
 import javafx.scene.image.ImageView;
+import javafx.scene.layout.Pane;
+import org.alienlabs.adaloveslace.App;
 import org.alienlabs.adaloveslace.business.model.Diagram;
 import org.alienlabs.adaloveslace.business.model.Knot;
 import org.alienlabs.adaloveslace.business.model.Pattern;
@@ -12,6 +14,7 @@ import org.junit.jupiter.params.provider.CsvSource;
 
 import java.io.FileInputStream;
 import java.io.IOException;
+import java.util.Optional;
 
 import static org.alienlabs.adaloveslace.functionaltest.AppFunctionalTestParent.*;
 import static org.junit.jupiter.api.Assertions.assertEquals;
@@ -24,29 +27,33 @@ class OptionalDotGridTest {
   @CsvSource({"1,0", "1.7,7", "3,20", "1.3,3", "1.0,0", "1.1,1", "0.9,-1", "1.2,2", "0.8,-2", "1.3,3", "0.7,-3"})
   void zoom_knot_factor(String expectedZoomFactor, String settedZoomFactor) {
     // Given
-    Knot knot = new Knot(0d, 0d, buildPattern(), imageView);
+    Knot knot = new Knot(0d, 0d, buildPattern(), Optional.of(""), imageView);
     knot.setZoomFactor(Integer.parseInt(settedZoomFactor));
 
     // When
-    double actualZoomFactor = new OptionalDotGrid(null, new Diagram(null), null).zoomAndFlipKnot(knot);
+    double actualZoomFactor = new OptionalDotGrid(null, new Diagram(new App()), new Pane()).zoomAndFlipPatternKnot(knot);
 
     // Then
     assertEquals(Double.valueOf(expectedZoomFactor), actualZoomFactor);
   }
 
-  private Pattern buildPattern() {
+  private Optional<Pattern> buildPattern() {
     Pattern pattern = new Pattern();
 
     pattern.setAbsoluteFilename(CLASSPATH_RESOURCES_PATH + COLOR_WHEEL_IMAGE);
 
-    try (FileInputStream fis = new FileInputStream(new FileUtil().getResources(this, java.util.regex.Pattern.compile(CLASSPATH_RESOURCES_PATH_JPG)).get(0))) {
+    try (FileInputStream fis = new FileInputStream(
+            new FileUtil().getResources(
+                    this,
+                    java.util.regex.Pattern.compile(CLASSPATH_RESOURCES_PATH_JPG)).getFirst()
+    )) {
       Image image = new Image(fis);
       imageView = new ImageView(image);
     } catch (IOException e) {
       throw new RuntimeException(e);
     }
 
-    return pattern;
+    return Optional.of(pattern);
   }
 
 }
